log
Fri, Mar 21, 2025 12:31:19 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 12:52:24 AM: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
8bce78c
Fri, Mar 21, 2025 12:53:01 AM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
76ccc12
Fri, Mar 21, 2025  1:00:13 AM: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
da88d14
Fri, Mar 21, 2025  1:06:42 AM: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  3|2
total_score: 40/70
ca540c1
Fri, Mar 21, 2025  1:06:54 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
4da3730
Fri, Mar 21, 2025  9:06:05 PM: 
 exercises.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:121:29: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
             push(pilaParen, cadena[i]);
                             ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
1d7970a
Fri, Mar 21, 2025  9:15:24 PM: 
 exercises.c | 15 ++++++---------
 1 file changed, 6 insertions(+), 9 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:121:29: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
             push(pilaParen, cadena[i]);
                             ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
90000b5
Fri, Mar 21, 2025  9:16:28 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
total_score: 70/70
0d7fe8d
